# vgmstream-android

./: .gitignore  README.md  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
.github/workflows/: android-build-prerelease.yml
sample/: settings.gradle.kts
sample/app/: build.gradle.kts
sample/app/src/main/: AndroidManifest.xml
sample/app/src/main/java/me/ayra/vgmstream/sample/: MainActivity.kt
sample/app/src/main/res/values/: styles.xml
src/main/cpp/: CMakeLists.txt  vgmstream_jni.cpp
src/main/java/com/github/vgmstream/android/: AndroidMediaPcmDecoder.kt  AudioTrackVgmPlayer.kt  LoopInfo.kt  LoopMode.kt  LopuPcmDecoder.kt  PcmDecoder.kt  VgmDecoder.kt  VgmDecoderFactory.kt  VgmNative.kt  VgmPlayer.kt  VgmSettings.kt
src/main/java/me/ayra/vgmstream/: AndroidMediaPcmDecoder.kt  AudioTrackVgmPlayer.kt  ChannelOutput.kt  LoopMode.kt  LopuPcmDecoder.kt  PcmDecoder.kt  VgmDecoderFactory.kt  VgmNative.kt  VgmPlayer.kt  VgmSettings.kt
vgmstream-core/: build.gradle.kts
vgmstream-core/src/main/cpp/: vgmstream_jni.cpp
vgmstream-core/src/main/java/me/ayra/vgmstream/: AndroidMediaPcmDecoder.kt  ChannelOutputPcmDecoder.kt  LoopInfo.kt  LopuPcmDecoder.kt  VgmDecoder.kt  VgmDecoderFactory.kt  VgmNative.kt
vgmstream-media3/: build.gradle.kts  consumer-rules.pro
vgmstream-media3/src/main/java/me/ayra/vgmstream/media3/: VgmPlayerAdapter.kt
